# Foreplayer

./: .gitignore  AUTHORS  COPYING  Doxyfile  Readme.md  addheader.py  appveyor.yml  build_desktop_app.bat  foreplayer.pro  main.cpp  mkdocs.yml
app/: app.cpp  app.h  app.pri
app/controller/: abstractcontroller.cpp  abstractcontroller.h  backendcontroller.cpp  backendcontroller.h  controller.pri  equalizercontroller.cpp  equalizercontroller.h  maincontroller.cpp  maincontroller.h  playercontroller.cpp  playercontroller.h  playlistcontroller.cpp  playlistcontroller.h
app/controller/model/: abstractmodel.cpp  abstractmodel.h  missionsmodel.cpp  missionsmodel.h  musiclistmodel.cpp  musiclistmodel.h  playlistmodel.cpp  playlistmodel.h  tracklistmodel.cpp  tracklistmodel.h
app/controller/spectrum/: frequencyspectrum.cpp  spectrum.h  spectrumanalyser.cpp  spectrumanalyser.h  spectrumutils.cpp
app/core/: core.cpp  core.h  core.pri  playercore.cpp  playercore.h  playlistcore.cpp  playlistcore.h  playthread.cpp  playthread.h
app/core/filter/: samplesfilter.cpp  samplesfilter.h
app/core/front/: abstractfront.cpp  abstractfront.h  directsoundfront.cpp  directsoundfront.h  loopbuffer.cpp  loopbuffer.h  sdlfront.cpp  sdlfront.h
app/gui/: gui.pri  guimanager.cpp  guimanager.h
app/utils/: pch.h  preferences.cpp  preferences.h  utils.cpp  utils.h  utils.pri
app/version/: win32_ver.h  win32_ver.hh
controller/: backendcontroller.cpp  backendcontroller.h  controller.cpp  controller.h  controller.pri  maincontroller.cpp  maincontroller.h  playercontroller.cpp  playercontroller.h  playlistcontroller.cpp  playlistcontroller.h  tcontroller.cpp  tcontroller.h
controller/model/: abstractmodel.cpp  abstractmodel.h  musiclistmodel.cpp  musiclistmodel.h  playlistmodel.cpp  playlistmodel.h  tracklistmodel.cpp  tracklistmodel.h
core/: core.cpp  core.h  core.pri  playercore.cpp  playercore.h  playlistcore.cpp  playlistcore.h  playthread.cpp  tplayercore.cpp  tplayercore.h
core/backend/: backendplugin.cpp  backendplugin.h
core/filter/: tsamplesfilter.cpp  tsamplesfilter.h
core/front/: abstractfront.cpp  abstractfront.h  directsoundfront.cpp  directsoundfront.h  sdlfront.cpp  sdlfront.h
core/playlist/: musicitem.cpp  musicitem.h  playlistdef.h  playlistitem.cpp  playlistitem.h  trackitem.cpp  trackitem.h
core/pluginmanager/: abstractpluginmanager.cpp  abstractpluginmanager.h  backendpluginmanager.cpp  backendpluginmanager.h
desktop/: build.bat  build.cmd  foreplayer.pro  main.cpp
desktop/app/: app.cpp  app.h  app.pri
desktop/tools/: .gitignore  build.bat
desktop/tools/3dparty/lame-3.100/: CMakeLists.txt  build.bat
gui/: gui.pri  guimanager.cpp  guimanager.h  skinutils.cpp  skinutils.h  tguimanager.cpp  tguimanager.h
gui/menus/: abstractmenu.cpp  equalizermenu.cpp  mainmenu.h  menus.ui  playcontrolmenu.cpp  playcontrolmenu.h  skinmenu.cpp  tabstractmenu.cpp  tabstractmenu.h  tequalizermenu.cpp  tequalizermenu.h  tmainmenu.cpp  tmainmenu.h  tplaycontrolmenu.cpp  tplaycontrolmenu.h  tplaymodemenu.cpp  tplaymodemenu.h  transparentmenu.cpp  transparentmenu.h  tskinmenu.cpp  tskinmenu.h  ttransparentmenu.cpp  ttransparentmenu.h  tvolumecontrolmenu.cpp  tvolumecontrolmenu.h  volumecontrolmenu.cpp
gui/share/: skin.cpp  skin.h  skinutils.cpp  skinutils.h
gui/skinloader/: skinloader.cpp  skinloader.h
gui/windows/: abstractwindow.cpp  abstractwindow.h  browserwindow.cpp  browserwindow.h  desctoplyricwindow.cpp  desctoplyricwindow.h  desktopwindow.cpp  desktopwindow.h  equalizerwindow.cpp  equalizerwindow.h  lyricwindow.cpp  lyricwindow.h  mainwindow.cpp  mainwindow.h  miniwindow.cpp  miniwindow.h  playlistwindow.cpp  playlistwindow.h  tabstractwindow.cpp  tabstractwindow.h  tbrowserwindow.cpp  tbrowserwindow.h  tdesctoplyricwindow.cpp  tdesctoplyricwindow.h  tdesktopwindow.cpp  tdesktopwindow.h  tequalizerwindow.cpp  tequalizerwindow.h  tlyricwindow.cpp  tlyricwindow.h  tmainwindow.cpp  tmainwindow.h  tplaylistwindow.cpp  tplaylistwindow.h
plugins/backend/: backendinterface.h
sdk/: .gitignore  CMakeLists.txt  Readme.txt  build.bat  foreplayerlib.cbp  foreplayerlib.depend  foreplayerlib.layout  foreplayerlib.pro  make.sh
sdk/include/: foreplayer.h
sdk/plugins/: CMakeLists.txt  build.bat
sdk/plugins/backend/: CMakeLists.txt  backendinterface.h  build.bat
sdk/plugins/backend/ao/: CMakeLists.txt  abstractparse.cpp  abstractparse.h  ao.pro  build.bat  fileparse.cpp  fileparse.h  main.cpp  zipparse.cpp  zipparse.h
sdk/plugins/backend/arcade/: CMakeLists.txt  arcade.pro  build.bat  m1thread.cpp  m1thread.h  main.cpp
sdk/plugins/backend/default/: CMakeLists.txt  bass.pro  build.bat  main.cpp
sdk/plugins/backend/familygame/: CMakeLists.txt  abstractparse.h  build.bat  fileparse.cpp  fileparse.h  gme.pro  gmewrap.cpp  gmewrap.h  main.cpp  rarparse.cpp  rarparse.h  zipparse.cpp  zipparse.h
sdk/plugins/backend/wizard/: CMakeLists.txt  build.bat  main.cpp  plugin.pro
sdk/plugins/pluginutils/: pluginutils.cpp  pluginutils.h
sdk/src/: core.cpp  core.h  cplusutils.cpp  cplusutils.h  exportcore.cpp  exportcore.h  foreplayerlib.cpp  playercore.cpp  playercore.h  playlistcore.cpp  playlistcore.h  playthread.cpp  playthread.h  strformat.hpp
sdk/src/filter/: samplesfilter.cpp  samplesfilter.h
sdk/src/front/: abstractfront.cpp  abstractfront.h  loopbuffer.cpp  loopbuffer.h  sdlfront.cpp  sdlfront.h
sdk/src/playlist/: abstractitem.cpp  abstractitem.h  jsonwrap.cpp  jsonwrap.h  musicitem.cpp  musicitem.h  playlistdef.h  playlistitem.cpp  playlistitem.h  trackitem.cpp  trackitem.h
sdk/src/pluginmanager/: abstractpluginmanager.cpp  abstractpluginmanager.h  backendpluginmanager.cpp  backendpluginmanager.h  library.cpp  library.h
sdk/src/pluginmanager/backend/: backendplugin.cpp  backendplugin.h
test/testCore/: main.cpp  testCore.pro
test/testGui/: main.cpp  testGui.pro
test/testView/: main.cpp  testView.pro
tools/exportor/: exportor.pro  main.cpp
tools/noconsole/: noconsole.c
utils/: pch.h  preferences.cpp  preferences.h  utils.h  utils.pri
(+674 files in other folders)
