set(FOREPLAYERLIB_BACKENDPLUGIN_DIST_PREFIX ${FOREPLAYERLIB_PLUGIN_DIST_PREFIX}/backend)
option(FOREPLAYERLIB_PLUGIN_BACKEND_GME "Build game music emulator plugin" ON)
option(FOREPLAYERLIB_PLUGIN_BACKEND_AOSDK "Build audio overload plugin" ON)
option(FOREPLAYERLIB_PLUGIN_BACKEND_M1 "Build m1 arcade plugin" ON)
option(FOREPLAYERLIB_PLUGIN_BACKEND_BASS "Build bass plugin" ON)

if(FOREPLAYERLIB_PLUGIN_BACKEND_GME)
    add_subdirectory(familygame)
endif(FOREPLAYERLIB_PLUGIN_BACKEND_GME)

if(FOREPLAYERLIB_PLUGIN_BACKEND_AOSDK)
    add_subdirectory(ao)
endif(FOREPLAYERLIB_PLUGIN_BACKEND_AOSDK)

if(FOREPLAYERLIB_PLUGIN_BACKEND_BASS)
    add_subdirectory(default)
endif(FOREPLAYERLIB_PLUGIN_BACKEND_BASS)

if(FOREPLAYERLIB_PLUGIN_BACKEND_M1)
    add_subdirectory(arcade)
endif(FOREPLAYERLIB_PLUGIN_BACKEND_M1)